# sudoku-cpp

./: CMakeLists.txt  main.cpp
sudoku/v1/: Arbol.cpp  Arbol.h  Archivo.cpp  Archivo.h  Lista.h  Nodo_Arbol.h  Zudoku.cpp  Zudoku.h  leer.txt
